# freelance-crm

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml
alembic/: env.py
alembic/versions/: 0d86bbb0d929_create_users_table.py  216c95952af0_create_clients_tables.py  db8b5415c057_create_orders_order_files_tables.py  de0ec3b016a0_first_migration.py  e106f2e976b0_change_username_to_fio_in_clients.py  ea44ca41c1a2_change_table_names.py
app/: base_schemas.py  db.py  main.py  models.py  schema.py
app/api/: __init__.py
app/api/v1/clients/: models.py  routes.py  schemas.py
app/api/v1/orders/: models.py  routes.py  schemas.py
app/api/v1/users/: models.py  routes.py  schemas.py  utils.py
app/templates/: base.html
app/templates/dashboard/: clients.html  header.html  main.html  orders.html  parsers.html
app/templates/users/: login.html
app/utils/: hasher.py  utils.py
app/web/: __init__.py
app/web/dashboard/: routes.py
app/web/users/: forms.py  routes.py
tests/: clients.http  conftest.py  users.http
tests/api/v1/: test_clients.py  test_orders.py  test_users.py
