[tool.poetry]
name = "freelance_crm"
version = "0.0.1"
description = ""
authors = ["Andrew281213 <andrey.domakhin8@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
alembic = "^1.9.2"
SQLAlchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"
databases = {extras = ["postgresql"], version = "^0.7.0"}
uvicorn = "^0.20.0"
fastapi-jwt-auth = "^0.5.0"
python-dotenv = "^0.21.0"
loguru = "^0.6.0"
SQLAlchemy-Utils = "^0.39.0"
passlib = "^1.7.4"
Jinja2 = "^3.1.2"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
